<resources>
    <string name="app_name">GoRide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="slogan">Ride Smarter , Not Harder</string>
    <string name="forget_password">Forget Password?</string>
    <string name="choose">Choose</string>
    <string name="sign_up_for_rider">Sign Up For Rider</string>
    <string name="sign_up_for_driver">Sign Up For Driver</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="by_signing_up_you_agree_to_our_terms_and_conditions">By signing up, you agree to our Terms and Conditions</string>
    <string name="age">Age</string>
    <string name="age_helper">write your age Like 21</string>
    <string name="gays_are_not_allowed">Gays are not allowed</string>
    <string name="profile">Profile</string>
    <string name="services">Services</string>
    <string name="home">Home</string>
    <string name="start">Start</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="test">test</string>
    <string name="start_destination">Pick Up Destination</string>
    <string name="end_destination">End Destination</string>
    <string name="rider_or_driver">Rider or Driver</string>
    <string name="send_email">send email</string>
    <string name="additional_information">Additional Information</string>
    <string name="upload_image">upload image</string>
    <string name="profile_image">profile image</string>
    <string name="national_id_front">national id front</string>
    <string name="national_id_back">national id back</string>
    <string name="driving_license_front">driving license front</string>
    <string name="driving_license_back">driving license back</string>
    <string name="vehicle_registration">vehicle registration</string>
    <string name="vehicleimage">vehicleImage</string>
    <string name="car_type">car type</string>
    <string name="disks_number">disks number</string>
    <string name="done">Done</string>
    <string name="available_trips">Available Trips</string>
    <string name="pick_up_location">pick up location $location </string>
    <string name="home_many_riders">Book How much ?</string>
    <string name="when">when ?</string>
    <string name="click">click</string>
    <string name="name_of_the_driver">Name Of The Driver</string>
    <string name="request_a_ride">Request A Ride</string>
    <string name="request_dialog">your about to request a trip \n so be there on 2 mins \n or your request will be cancelled</string>
    <string name="cancel">cancel</string>
    <string name="driver_name">Driver Name</string>
    <string name="car_number">Car Number</string>
    <string name="available">Available</string>
    <string name="coming_soon">coming soon</string>
    <string name="continue_">Continue</string>
    <string name="car_info">Car Info</string>
    <string name="setting_">setting</string>
    <string name="under_development">Under Development</string>
    <string name="from_sadat_city">From: Sadat city</string>
    <string name="to_badr_city">To: Badr city</string>
    <string name="_from"> From: </string>
    <string name="_to"> To: </string>
    <string name="_100">100</string>
    <string name="fare">Fare</string>
    <string name="fare_example">Fare: 5.00</string>
    <string name="save">save</string>
    <string name="_error">Error</string>
    <string name="_next">Next</string>
    <string name="_add">Add</string>
    <string name="_delete">Delete</string>
    <string name="you_are_working_in_the_following_trips">You are working in the following trips:</string>
    <string name="choose_the_trip_you_want_to_work_in">Choose the trip you want to work in \n
        if you choose any one it should be in a different color</string>
    <string name="are_you_sure_you_want_to_select_those_trips_n_you_can_change_your_selection_later">Are you sure you want to select those trips?
        \n You can change your selection later.</string>
    <string name="ok">ok</string>
    <string name="you_are_about_to_logout_are_you_sure">You are about to logout. Are you sure?</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_you_want_to_update_your_information">Are you sure you want to update your information?</string>
    <string name="privacy_policy">
    <![CDATA[
<!DOCTYPE html>
<html>
<head>
  <title>Privacy Policy</title>
</head>
<body>
  <h2>Privacy Policy for GoRide</h2>
  <p>At GoRide, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by GoRide and how we use it.</p>
  <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
  <h3>Information We Collect</h3>
  <h4>Personal Information</h4>
  <p>We do not collect any personal information such as your name, address, phone number, or email address.</p>
  <h4>Non-personal Information</h4>
  <p>We may collect non-personal information about you when you use our app. This information may include:</p>
  <ul>
    <li>Device information: We may collect information about the type of device you are using to access the app, including the device model, operating system, and mobile network information.</li>
    <li>Log information: We may collect log information about your use of the app, including the type of browser you are using, access times, pages viewed, and IP address.</li>
  </ul>
  <h3>How We Use Your Information</h3>
  <p>We do not sell, rent, or share your personal information with third parties.</p>
  <p>The non-personal information we collect may be used to improve our app and to better understand how our users interact with the app.</p>
  <h3>Security</h3>
  <p>We take reasonable steps to protect the information we collect from unauthorized access or disclosure.</p>
  <h3>Changes to this Policy</h3>
  <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
  <h3>Contact Us</h3>
  <p>If you have any questions or concerns about our Privacy Policy, please contact us at AbdoAhmed.bzn@gmail.com .</p>
</body>
</html>
    ]]>
</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="send">send</string>

    <array name="vehicle_type">
        <item>Taxi</item>
        <item>Bus</item>
        <item>MicroBus</item>
        <item>MiniBus</item>
        <item>TyneBus</item>
    </array>
    <array name="user_type">
        <item>Rider</item>
        <item>Driver</item>
    </array>
    <array name="when_to_ride">
        <item>Now</item>
        <item>When Iam around</item>
    </array>
</resources>