<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="tripsLine"
            type="com.theideal.goride.model.TripsLine" />

        <variable
            name="viewModel"
            type="com.theideal.goride.ui.driver.home.home_services.work_in_trip.WorkInTripFragmentViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_from_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/from_sadat_city"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_to_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:set_location_text="@{tripsLine.startDestination}" />

        <TextView
            android:id="@+id/tv_to_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/to_badr_city"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_from_card"
            app:set_location_text="@{tripsLine.endDestination}" />

        <TextView
            android:id="@+id/btn_add_card"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:hint="@string/fare_example"
            android:text="@{tripsLine.fare}"
            app:layout_constraintEnd_toStartOf="@+id/item_checkbox"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.addAndRemoveTrip(tripsLine)}"
            app:isChecked="@{viewModel.isChecked}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>